--- a/public/index.html
+++ b/public/index.html
@@ -19,13 +19,18 @@
   <link rel="stylesheet" href="css/main.css">
 
   <script src="js/vendor/modernizr-2.8.3.min.js"></script>
+  <script src="/socket.io/socket.io.js"></script>
+  <script>
+    var socket = io();
+  </script>
 </head>
 
 <body>
 
-  <div class='col-xs-12'>hi</div>
+  <div id='main' class='col-xs-12'></div>
 
   <script src="js/vendor/jquery-1.11.2.js"></script>
+  <script src="js/vendor/d3.js"></script>
   <script src="js/vendor/bootstrap.min.js"></script>
 
   <script src="build/bundle.js"></script>
